# ocra-gui

./: .gitignore  CMakeLists.txt  README.md  connectionmonitor.cpp  connectionmonitor.h  gazebotools.cpp  gazebotools.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagetypes.h  ocra-gui.pro  physicstools.cpp  physicstools.h  resources.qrc  taskwidget.cpp  taskwidget.h  taskwidget.ui  yarptools.cpp  yarptools.h
